cleanup: implement logger as a replacement for system out