@@ -3,7 +3,6 @@ package com.cems.frontend.utils;
 import com.cems.frontend.models.User;
 import com.cems.shared.model.UserDTO;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Utility mapper for converting user DTOs into frontend user models.
@@ -49,8 +48,7 @@ public final class UserMapper {
    */
   public static List<User> toModelList(List<UserDTO> dtos) {
     return dtos.stream()
-        .map(UserMapper::toModel)
-        .collect(Collectors.toList());
+        .map(UserMapper::toModel).toList();
   }
 }
 
